_devel/envoy/envoy.yaml
static_resources:
  listeners:
    - name: listener_http
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                      log_format:
                        text_format_source:
                          inline_string: "[%REQ(X-REQUEST-ID)%] %START_TIME(%Y-%m-%d %H:%M:%S.%3f)% [execTime: %DURATION%] %REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL% [status: %RESPONSE_CODE%][x-linksys-moab-site-id: %REQ(x-linksys-moab-site-id)%][ssl-client-verify: %REQ(ssl-client-verify)%][user-agent: %REQ(USER-AGENT)%][ssl-client-subject-dn: %REQ(ssl-client-subject-dn)%][%REQ(:AUTHORITY)%][%UPSTREAM_HOST%][jwt-extracted-user: %REQ(jwt-extracted-user)%]\n"
                http_filters:
                  - name: envoy.filters.http.jwt_authn
                    typed_config:
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication"
                      providers:
                        jwt_auth:
                          issuer: gogotravel
                          local_jwks:
                            filename: /etc/envoy/jwks/publickey-jwks.txt
                          from_headers:
                            - name: Authorization
                              value_prefix: "Bearer "
                          payload_in_metadata: jwt_payload
                      rules:
                        # Not jwt verification is required for POST /v1/jwt-tokens path
                        - match:
                            prefix: "/v1/jwt-tokens"
                            headers:
                              name: :method
                              string_match:
                                exact: POST
                        # Jwt verification for jwt_auth is required for all other requests.
                        - match:
                            prefix: "/"
                          requires:
                            provider_name: jwt_auth
                  - name: envoy.filters.http.lua
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
                      inline_code: |
                        function envoy_on_request(request_handle)
                          local meta = request_handle:streamInfo():dynamicMetadata()
                          for key, value in pairs(meta) do
                            request_handle:headers():add("jwt-extracted-user", value.jwt_payload.iss)
                          end
                        end
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  virtual_hosts:
                    - name: local_routes
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/v1/jwt-tokens"
                          route:
                            cluster: host30001
                        - match:
                            prefix: "/"
                          response_headers_to_add:
                            - header:
                                key: "Content-Type"
                                value: "application/json"
                          direct_response:
                            status: 403
                            body:
                              inline_string: "{\"code\":\"FORBIDDEN\",\"errorMessage\": \"Invalid routing path\"}"
  clusters:
    - name: host30001
      type: STRICT_DNS
      connect_timeout: 5s
      load_assignment:
        cluster_name: host30001
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: host.docker.internal
                      port_value: 30001
